# stractor

./: pyproject.toml
src/stractor/: __init__.py  core.py  main.py  model.py
src/stractor/tests/: test_stractor.py
