[project]
name = "stractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Francisco Filho", email = "francisco@capimgrosso.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
stractor = "stractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.7.3",
]
